--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,7 +14,7 @@ sites:
   - name: Vaultwarden
     url: https://warden.cyp0633.icu
   - name: FRP
-    url: https://code.cyp0633.icu/frp/static
+    url: https://code.cyp0633.icu/frp/static/#/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
